[package]
name = "dev"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
integer = { path = "../integer", default-features = false }
ecc = { path = "../ecc", default-features = false }
maingate = { path = "../maingate", default-features = false }

num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
group = "0.12"
subtle = { version = "2.3", default-features = false }
rand_core = { version = "0.6", default-features = false }
paste = "1.0.7"

[[bin]]
name = "circ-estimator"
path = "src/estimator.rs"
